--- a/src/assets/scss/_custom.scss
+++ b/src/assets/scss/_custom.scss
@@ -1,3 +1,5 @@
-.min-h-full {
-  min-height: 99vh;
+@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@600&display=swap");
+.site-title {
+  font-family: "Source Sans Pro", "Courier New", Courier, monospace;
+  font-size: 2rem;
 }
