--- a/src/components/app/app.component.html
+++ b/src/components/app/app.component.html
@@ -1,6 +1,6 @@
 <header
   class="w-full items-center justify-between flex-wrap bg-green-200 p-4 mb-4 rounded-md"
 >
-  <div class="site-title">DLink Angular demo <small>🖇</small></div>
+  <div class="site-title">DataLink Angular demo <small>🖇</small></div>
 </header>
 <custom-form></custom-form>
