--- a/src/assets/scss/_tailwind-base.css
+++ b/src/assets/scss/_tailwind-base.css
@@ -1,6 +1,7 @@
 /* Note: `npm run tailwind` compiles this file into
-*         src/assets/scss/_tailwind.css, which is imported from _init.scss.
-*         Styles not used in the app do not get bundled into the built css.
+*  src/assets/scss/_tailwind.css, which is imported from _init.scss.
+*  To purge styles not used in the app (for a prod build), change the settings
+*  in `ng-tailwind.js`[purge] = true
 */
 @tailwind base;
 @tailwind utilities;
