--- a/src/components/custom-form/custom-form.component.html
+++ b/src/components/custom-form/custom-form.component.html
@@ -34,18 +34,21 @@
           id="ways"
           type="text"
           placeholder="I enjoy the challenge of solving..."
+          required
+          minlength="2"
+          appForbiddenName="I don't"
         />
       </div>
-    </div>
-    <div class="md:flex md:items-center">
-      <div class="md:w-1/3"></div>
-      <div class="md:w-2/3">
-        <button
-          class="shadow bg-green-600 hover:bg-green-700 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
-          type="button"
-        >
-          Submit
-        </button>
+      <div class="md:flex md:items-center">
+        <div class="md:w-1/3"></div>
+        <div class="md:w-2/3">
+          <button
+            class="shadow bg-green-600 hover:bg-green-700 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+            type="button"
+          >
+            Submit
+          </button>
+        </div>
       </div>
     </div>
   </form>
