--- a/src/assets/scss/_custom.scss
+++ b/src/assets/scss/_custom.scss
@@ -1,5 +1,20 @@
 @import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@600&display=swap");
+
 .site-title {
   font-family: "Source Sans Pro", "Courier New", Courier, monospace;
   font-size: 2rem;
+}
+button:disabled {
+  opacity: 0.55;
+  user-select: none;
+  border: 1px solid transparent;
+  pointer-events: none;
+}
+.gh-icon {
+  background-image: url("../images/github-icon.svg");
+  height: 24px;
+  width: 24px;
+  &:hover {
+    cursor: pointer;
+  }
 }
