--- a/src/components/app/app.component.html
+++ b/src/components/app/app.component.html
@@ -1,6 +1,26 @@
 <header
   class="w-full items-center justify-between flex-wrap bg-green-200 p-4 mb-4 rounded-md"
 >
-  <div class="site-title">DataLink Angular demo <small>🖇</small></div>
+  <div class="md:flex items-center">
+    <div class="md:w-1/3">
+      <div class="site-title">DataLink Angular demo <small>🖇</small></div>
+    </div>
+    <div class="md:w-1/3"></div>
+    <div class="md:w-1/3">
+      <div class="h-full">
+        <p>
+          <a
+            href="https://github.com/kopickik/ang8-exp"
+            title="View kopickik's repos on GitHub"
+            target="_blank"
+          >
+            <span class="gh-icon inline-block">&nbsp;</span>
+            <small> @kopickik</small>
+          </a>
+        </p>
+      </div>
+    </div>
+  </div>
 </header>
+
 <custom-form></custom-form>
