--- a/src/components/custom-form/custom-form.component.html
+++ b/src/components/custom-form/custom-form.component.html
@@ -38,8 +38,11 @@
           placeholder="I enjoy the challenge of solving..."
           required
           minlength="2"
-          appForbiddenName="I don't"
+          appForbiddenAnswer="I don't"
         />
+        <div *ngIf="ways.errors?.forbiddenAnswer" class="pt-2 pl-2">
+          <p class="text-red-500 text-sm"><em>I'm sorry Dave</em>. 🤖</p>
+        </div>
       </div>
     </div>
     <div class="md:flex mb-6 md:items-center">
