--- a/src/assets/scss/_custom.scss
+++ b/src/assets/scss/_custom.scss
@@ -1,8 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@600&display=swap");
 
-.site-title {
+.source-sans-pro {
   font-family: "Source Sans Pro", "Courier New", Courier, monospace;
-  font-size: 2rem;
 }
 button:disabled {
   opacity: 0.55;
