--- a/src/components/app/app.component.html
+++ b/src/components/app/app.component.html
@@ -10,7 +10,7 @@
       <div class="h-full">
         <p>
           <a
-            href="https://github.com/kopickik/ang8-exp"
+            href="https://github.com/kopickik/crooked-spine"
             title="View kopickik's repos on GitHub"
             target="_blank"
           >
